Refactor APT processors and templates